--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -450,9 +450,13 @@ a {
 }
 
 @media screen and (max-width: 480px) {
+    body {
+        height: auto;
+        min-height: 100%;
+    }
     main {
         width: 100%;
-        height: 100%;
+        min-height: fit-content;
         border-radius: 0;
         margin: 0;
     }
