--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -205,6 +205,7 @@ button {
     border: none;
     border-radius: 1rem;
     background: var(--theme-color);
+    color: var(--background-primary);
     font-family: var(--font);
     font-weight: 700;
     font-size: 1rem;
