--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -210,7 +210,7 @@ button {
     font-weight: 700;
     font-size: 1rem;
     cursor: pointer;
-    transition: background .2s ease;
+    transition: all .2s ease;
 }
 
 button:hover, button:focus {
@@ -220,6 +220,7 @@ button:hover, button:focus {
 
 button:disabled {
     cursor: not-allowed;
+    opacity: .6;
 }
 
 .error {
